# toy-english

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dict/: SOURCE.txt
examples/: boat-sentence-analysis.json  llm-prompt-sentence-analysis.md
scripts/: build-wasm.mjs  download-dicts.mjs
src/: levelApi.ts  main.ts  sentenceAnalysis.ts  style.css  tts.ts  vite-env.d.ts  wasm-bindings.d.ts
wasm-game/: Cargo.toml
wasm-game/src/: bootstrap.rs  canvas.rs  dom_bridge.rs  entities.rs  levels.rs  lib.rs  monster_animals.rs  util.rs
wasm-game/src/game/: constants.rs  draw.rs  hud.rs  logic.rs  mod.rs  mode.rs  state.rs
